--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,27 @@
-sudo: false
 language: generic
+os: linux
+dist: xenial
 env:
   global:
     - CURL="curl -fsSkL --retry 9 --retry-delay 9"
-  matrix:
-  - EMACS_VERSION=24.4
-  - EMACS_VERSION=24.5
-  - EMACS_VERSION=25.1
-  # 25.2 is identical to 25.3 except for a critical security bug in
-  # enriched text mode (see Emacs Bug#28350).
-  - EMACS_VERSION=25.3
-  - EMACS_VERSION=26 # emacs-26 branch, built daily
-  - EMACS_VERSION=master # master branch, built daily
+    - GHRAW="https://raw.githubusercontent.com"
+  jobs:
+    - EMACS_VERSION=25.1
+    # 25.2 is identical to 25.3 except for a critical security bug in
+    # enriched text mode (see Emacs Bug#28350).
+    - EMACS_VERSION=25.3
+    - EMACS_VERSION=26.1   # Debian is on this version.
+    - EMACS_VERSION=26.3
+    - EMACS_VERSION=27     # 27.0.90, emacs-27 branch, built daily
+    - EMACS_VERSION=master # 28.0.50, master branch, built daily
   allow_failures:
     - env: EMACS_VERSION=master
 install:
   - $CURL -O https://github.com/npostavs/emacs-travis/releases/download/bins/emacs-bin-${EMACS_VERSION}.tar.gz
   - tar -xaf emacs-bin-${EMACS_VERSION}.tar.gz -C /
   - export EMACS=/tmp/emacs/bin/emacs
-  - $CURL -O https://raw.githubusercontent.com/magnars/dash.el/master/dash.el
+  - $CURL -O ${GHRAW}/magnars/dash.el/master/dash.el
+  - $CURL -O ${GHRAW}/magnars/s.el/master/s.el
   - $EMACS -Q --batch -L . -f batch-byte-compile dash.el
   - $EMACS --version
 script:
